# Kempis-turtle

./: .gitignore  SYSTEM_DESIGN.md  readme.md
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  build_output.txt  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: model_meta.json
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/export/: mod.rs
apps/desktop/src/components/: ControlBar.tsx  ExportPanel.tsx  StatsPanel.tsx  VideoPlayer.tsx
apps/desktop/src/hooks/: useVideoAnalysis.ts
apps/desktop/src/services/: onnxService.ts  tracker.ts
apps/desktop/src/store/: analysisStore.ts
apps/desktop/src/types/: index.ts
training/: colab_train.py
